--- a/src/app/pages/assistance-proceed/assistance-proceed.component.scss
+++ b/src/app/pages/assistance-proceed/assistance-proceed.component.scss
@@ -25,4 +25,18 @@
       justify-content: space-between;
     }
   }
+  .time-status {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    > span {
+      align-self: center;
+      font-size: 45px;
+      font-weight: bolder;
+      color: darkgrey;
+    }
+  }
+  .override-arrived {
+    margin-right: 15px;
+  }
 }
