--- a/src/app/pages/orders/order-details/order-details.component.html
+++ b/src/app/pages/orders/order-details/order-details.component.html
@@ -254,15 +254,14 @@
 
                         <div class="issuer accent" fxLayout="row" fxLayoutAlign="start center">
                           <div class="logo">
-                            <img src="assets/images/logos/fuse.svg" />
+                            <img src="assets/images/logos/logo.png" />
                           </div>
 
                           <div class="info">
-                            <div class="title">FUSE INC.</div>
-                            <div class="address">2810 Country Club Road Cranford, NJ 07016</div>
+                            <div class="title">ERA APP.</div>
                             <div class="phone">+66 123 455 87</div>
-                            <div class="email">hello@fuseinc.com</div>
-                            <div class="website">www.fuseinc.com</div>
+                            <div class="email">ERA@sample.com</div>
+                            <div class="website">www.ERA.com</div>
                           </div>
                         </div>
                       </div>
@@ -320,7 +319,7 @@
                       </table>
                     </div>
 
-                    <div class="footer">
+                    <!-- <div class="footer">
                       <div class="note">Please pay within 15 days. Thank you for your business.</div>
                       <div fxLayout="row" fxLayoutAlign="start start">
                         <div class="logo">
@@ -334,7 +333,7 @@
                           libero tincidunt lacinia et eget eros.
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
                   <!-- / INVOICE -->
                 </div>
